--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,6 +1,6 @@
-name: Commit
+name: Commit Push
 
-on: pull
+on: push
 
 jobs:
   fix_errors:
@@ -26,17 +26,17 @@ jobs:
         run: git status --porcelain | grep . && exit 1 || exit 0
       - name: Commiting messages
         env:
-          SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
+          SECRET_TOKEN: ${{ secrets.SECRET_TOKEN_APP }}
         if: failure()
         run: |
           git config --global user.email "igor.techweb@gmail.com"
           git config --global user.name "Igor Dolzhenkov"
           git add .
           git commit -m "Locales updat6"
-        # git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:"${GITHUB_REF:11}"
-      - name: Push changes
-        if: failure()
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ steps.comment-branch.outputs.ref }}
+          git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:"${GITHUB_REF:11}"
+      # - name: Push changes
+      #   if: failure()
+      #   uses: ad-m/github-push-action@master
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     branch: ${{ steps.comment-branch.outputs.ref }}
