--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -11,30 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Get yarn cache location
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Restore yarn cache
-        uses: actions/cache@v1
+        uses: actions/checkout@v1
         with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
+          fetch-depth: 1
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: "12.x"
+          node-version: "10.x"
           registry-url: "https://npm.pkg.github.com"
-
       - name: Install dependencies
-        run: yarn --frozen-lockfile --ignore-engines --ignore-optional --non-interactive --silent --ignore-scripts --production=false
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_REGISTRY_TOKEN }}
+        run: yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
       - uses: navikt/github-app-token-generator@v1
         id: gettoken
         with:
