--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -27,7 +27,7 @@ jobs:
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
           app-id: ${{ secrets.APP_ID }}
       - name: Extracting messages
-        run: yarn extract-messages
+        run: npx lingui extract
       - name: Push changes
         env:
           APP_INSTALLATION_TOKEN: ${{ steps.get-token.outputs.token }}
