--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
           app-id: ${{ secrets.APP_ID }}
-      - name: Extracting messages
+      - name: Extracting messages2
         run: npx lingui extract
       - name: Push changes
         env:
