--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -30,7 +30,7 @@ jobs:
         run: npx lingui extract
       - name: Push changes
         env:
-          APP_INSTALLATION_TOKEN: ${{ steps.get-token.outputs.token }}
+          APP_INSTALLATION_TOKEN: ${{ steps.gettoken.outputs.token }}
         run: |
           git config --global user.email "igor.techweb@gmail.com"
           git config --global user.name "Igor Dolzhenkov"
