--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -37,8 +37,8 @@ jobs:
           git config --global user.name "Igor Dolzhenkov"
           git add .
           git commit -m "Messages updated"
-      - name: Run forestx
-        run: ${{ steps.commit.outputs }}
+      #   - name: Run forestx
+      #     run: ${{ steps.commit.outputs }}
       #   git push https://igorDolzh:$APP_INSTALLATION_TOKEN@github.com/${{ github.repository }} HEAD:"${GITHUB_REF:11}"
       - uses: actions/github-script@v3
         with:
