--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -49,5 +49,5 @@ jobs:
                 repo: 'lingui-test',
                 ref: 'heads/igor-push-messages',
                 sha: '06c758adffa0fc91da4d30b9ef4740209b1b30f7',
-                force: false
+                force: true
             })
