--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -26,6 +26,10 @@ jobs:
         with:
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
           app-id: ${{ secrets.APP_ID }}
+      - uses: xt0rted/pull-request-comment-branch@v1
+        id: comment-branch
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Extracting messages2
         run: npx lingui extract
       - name: Push changes
