--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -56,6 +56,8 @@ jobs:
                 commit_sha:"${{ steps.commit.outputs.sha }}",
             })
 
+            console.log(commitDetails);
+
             const newCommitDetails = await github.git.createCommit({
                 owner: 'igorDolzh',
                 repo: "${{ github.event.repository.name }}",
