--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Get branch name
         id: branch
         run: echo "::set-output name=name::$(echo ${{github.event.ref}} | cut -c12-)"
-      - name: Extracting messages & push
+      - name: Extracting messages & push2
         uses: actions/checkout@v2
         with:
           github-token: ${{steps.gettoken.outputs.token}}
