--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Get branch name
         id: branch
         run: echo "::set-output name=name::$(echo ${{github.event.ref}} | cut -c12-)"
-      - name: Extracting messages & push2
+      - name: Extracting messages & push
         uses: actions/checkout@v2
         with:
           github-token: ${{steps.gettoken.outputs.token}}
       - run: |
-          yarn extract
+          npx lingui extract
           git config --global user.email "igor.techweb@gmail.com"
           git config --global user.name "Igor Dolzhenkov"
           git add .
