--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Debug Action
         uses: hmarr/debug-action@v1.0.0
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 1
+          github-token: ${{steps.gettoken.outputs.token}}
       - name: Setup node
         uses: actions/setup-node@v1
         with:
@@ -31,10 +31,9 @@ jobs:
       - name: Get branch name
         id: branch
         run: echo "::set-output name=name::$(echo ${{github.event.ref}} | cut -c12-)"
-      - name: Extracting messages & push
-        uses: actions/checkout@v2
-        with:
-          github-token: ${{steps.gettoken.outputs.token}}
+      - name: Extracting messages2
+        run: npx lingui extract
+      - name: Push
       - run: |
           npx lingui extract
           git config --global user.email "igor.techweb@gmail.com"
