--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Extracting messages2
         run: npx lingui extract
       - name: Push
-      - run: |
+        run: |
           npx lingui extract
           git config --global user.email "igor.techweb@gmail.com"
           git config --global user.name "Igor Dolzhenkov"
