--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -33,7 +33,8 @@ jobs:
         run: echo "::set-output name=name::$(echo ${{github.event.ref}} | cut -c12-)"
       - name: Extracting messages2
         run: npx lingui extract
-      - name: Push
+    - name: Checkout & Push
+        uses: actions/checkout@v2
         with:
           github-token: ${{steps.gettoken.outputs.token}}
         run: |
