--- a/.github/workflows/push_commit.yml
+++ b/.github/workflows/push_commit.yml
@@ -17,8 +17,6 @@ jobs:
         with:
           node-version: "10.x"
           registry-url: "https://npm.pkg.github.com"
-      - name: Install dependencies
-        run: yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
       - uses: navikt/github-app-token-generator@v1
         id: gettoken
         with:
@@ -31,6 +29,7 @@ jobs:
         with:
           github-token: ${{steps.gettoken.outputs.token}}
       - run: |
+          yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
           npx lingui extract
           git config --global user.email "igor.techweb@gmail.com"
           git config --global user.name "Igor Dolzhenkov"
