--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Get short SHA1
         if: (github.event.label && github.event.label.name == 'start-localisation') || (!github.event.label && steps.check_pr_labels.outputs.passed == 'true')
         id: comment
-        run: echo "::set-output name=tagname::$(echo ${GITHUB_SHA} | cut -c1-8)"
+        run: echo "::set-output name=tagname::$(echo ${{github.event.after}} | cut -c1-8)"
       - name: Get branch name
         if: (github.event.label && github.event.label.name == 'start-localisation') || (!github.event.label && steps.check_pr_labels.outputs.passed == 'true')
         id: branch
@@ -82,13 +82,19 @@ jobs:
           team-name: Pleo Team
 
           # List of email for task assignee
-          assignee-email-list: ${{secrets.ASSINE}}
+          assignee-email-list: '{
+            "fr": ["igor@pleo.io"],
+            "de": ["igor@pleo.io"],
+            "es": ["igor@pleo.io"],
+            "sv": ["igor@pleo.io"],
+            "da": ["igor@pleo.io"]
+          }'
 
-          # Task title
-          task-title: ${{ steps.findPr.outputs.title }}
+            # Task title
+          task-title: '${{ github.event.pull_request.title }}'
 
-          # Task description
-          task-description: "${{ steps.findPr.outputs.body }} <repo>${{ github.event.repository.name }}</repo> <ref>${{ steps.branch.outputs.name }}</ref>"
+            # Task description
+          task-description: '${{ github.event.pull_request.body }}'
 
           # Task options for https://app.lokalise.com/api2docs/curl/#transition-create-a-task-post
           task-options: '{"auto_close_task": true, "auto_close_languages": true}'
